--- a/_flexdashboard/status.Rmd
+++ b/_flexdashboard/status.Rmd
@@ -93,7 +93,7 @@ list(
     filter(ID_CO2 != -99,
            Time_UTC > Sys.time() - 86400) %>%
     group_by(stid) %>%
-    summarize(qaqc = paste(setdiff(unique(QAQC_Flag), c(-1, 0)), collapse = ',')),
+    summarize(qaqc = paste(setdiff(unique(QAQC_Flag), c(-9, -1, 0)), collapse = ',')),
   data$qaqc %>% 
     filter(ID_CO2 == -10, 
            Time_UTC > Sys.time() - 86400) %>%
