--- a/_flexdashboard/status.Rmd
+++ b/_flexdashboard/status.Rmd
@@ -2,10 +2,10 @@
 title: UATAQ Status Dashboard
 ---
 
-```{r setup}
+```{r Setup}
 library(flexdashboard)
 library(formattable)
-library(plotly)
+library(plotly, warn.conflicts = F)
 library(tidyverse)
 data <- readRDS('../_data.rds')
 colors <- c('#323031', '#413C58', '#6B818C', '#3DCCC7', '#76F7BF',
@@ -18,7 +18,7 @@ Row
 ------------------------------------------------------------------------------------------
 
 ### Average Diel Cycle (10-day) <span style="float:right;"><a href="/s/diagnostics/"><i class="fa fa-bar-chart"></i> Timeseries Diagnostics</a></span>
-```{r}
+```{r Diel Cycle}
 subplot(
   data$calibrated %>%
     filter(ID_CO2 == -10) %>%
@@ -58,7 +58,7 @@ subplot(
 ```
 
 ### Network Diagnostics (1-day) <span style="float:right;"><a href="https://github.com/uataq/data-pipeline#qaqc-flagging-conventions"><i class="fa fa-bars"></i> QAQC Definitions</a></span>
-```{r}
+```{r Network Diagnostics}
 pd_ref <- data$qaqc %>%
   filter(Time_UTC >= Sys.time() - 86400 * 1,
          ID_CO2 > 0) %>%
@@ -144,7 +144,7 @@ Row {.tabset data-height=600}
 
 ### Instrument Diagnostics (10-day)
 
-```{r}
+```{r Instrument Diagnostics}
 pd_h2o <- data$qaqc %>%
   filter(ID_CO2 == -10) %>%
   group_by(Time_UTC = as.POSIXct(trunc(Time_UTC, 'hours')),
@@ -191,7 +191,7 @@ subplot(
 
 ### CO<sub>2</sub> Calibrations
 
-```{r}
+```{r CO2 Calibrations}
 pd <- data$calibrated %>%
   filter(ID_CO2 == -10) %>%
   group_by(Time_UTC = as.POSIXct(trunc(Time_UTC, 'hours')),
@@ -269,7 +269,7 @@ subplot(
 ```
 
 ### CH<sub>4</sub> Calibrations
-```{r}
+```{r CH4 Calibrations}
 pd_ref <- filter(pd_ref, !is.na(ID_CH4))
 pd_ref_error <- filter(pd_ref_error, !is.na(`ch4 err`))
 pd_ref_fits <- pd_ref %>%
@@ -342,7 +342,7 @@ subplot(
 
 ### Log
 
-```{r}
+```{r Log}
 log_files <- dir('../../pipeline/log', full.names = T)
 log_content <- sapply(log_files, function(file) {
   con <- pipe(paste('tail -n 1000', file), 'rb')
