log updates post reprocess changes

--- a/_flexdashboard/status.Rmd
+++ b/_flexdashboard/status.Rmd
@@ -348,10 +348,9 @@ log_content <- sapply(log_files, function(file) {
   content <- read_file(con)
   close(con)
 
-  pattern <- 'Run: (\\w+)\\/(\\w+)\\s+(\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}:\\d{2})(?:(?!Run:)[\\s\\S])+'
+  pattern <- 'Run: (\\w+)\\s\\|\\s(\\d{4}-\\d{2}-\\d{2} \\d{2}:\\d{2}) MTN(?:(?!Run:)[\\s\\S])+'
   runs <- as.data.frame(str_match_all(content, pattern))
-  colnames(runs) <- c('content', 'stid', 'instrument', 'Time_UTC')
-  runs$Time_UTC <- lubridate::round_date(as.POSIXct(runs$Time_UTC), "15 minutes")
+  colnames(runs) <- c('content', 'stid', 'Time_UTC')
 
   run_content <- runs %>%
     slice_max(order_by = Time_UTC) %>%
